Thu Apr  5 01:07:34 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * examples/BasicSP/BMClosedED/BMClosedEDEI.idl:
        * examples/BasicSP/BMDevice/BMDeviceEI.idl:
        * examples/BasicSP/BMDisplay/BMDisplayEI.idl:
        * examples/BasicSP/EC/ECEI.idl:

          Removed these files.

Wed Apr  4 21:55:58 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
        * DAnCE/ExecutionManager/Execution_Manager.cpp:

          Improved the option handling of the Execution_Manager and
          plan_launcher.  This includes printing meaningful usage
          messages, and exiting with an error message when an error occurs
          instead of silent termination etc. etc.

        * examples/BasicSP/BMClosedED/BMClosedED.cidl:
        * examples/BasicSP/BMClosedED/BMClosedED.idl:
        * examples/BasicSP/BMClosedED/BMClosedED.mpc:
        * examples/BasicSP/BMClosedED/BMClosedED_exec.h:
        * examples/BasicSP/BMClosedED/BMClosedED_exec.cpp:
        * examples/BasicSP/BMDevice/BMDevice.cidl:
        * examples/BasicSP/BMDevice/BMDevice.idl:
        * examples/BasicSP/BMDevice/BMDevice.mpc:
        * examples/BasicSP/BMDevice/BMDevice_exec.h:
        * examples/BasicSP/BMDevice/BMDevice_exec.cpp:
        * examples/BasicSP/BMDisplay/BMDisplay.cidl:
        * examples/BasicSP/BMDisplay/BMDisplay.idl:
        * examples/BasicSP/BMDisplay/BMDisplay.mpc:
        * examples/BasicSP/BMDisplay/BMDisplay_exec.h:
        * examples/BasicSP/BMDisplay/BMDisplay_exec.cpp:
        * examples/BasicSP/BasicSP.idl:
        * examples/BasicSP/BasicSP.mpc:
        * examples/BasicSP/BasicSP.mwc:
        * examples/BasicSP/BasicSP_exec.h:
        * examples/BasicSP/BasicSP_exec.cpp:
        * examples/BasicSP/BasicSP_exec_export.h:
        * examples/BasicSP/EC/EC.cidl:
        * examples/BasicSP/EC/EC.idl:
        * examples/BasicSP/EC/EC.mpc:
        * examples/BasicSP/EC/EC_exec.h: